# toyrobot

./: CMakeLists.txt  README.md  test_input.txt
project/: CMakeLists.txt  robot_lib.cpp  robot_lib.hpp  robot_lib_test.cpp  toyrobot.cpp  toyrobot.hpp
project/toyrobot/: CMakeLists.txt
project/toyrobot/src/: toyrobot.cpp
